feat: add communication template
- divide campaign dtos
- divide visibility dtos
- add communication template in db